# sequencer

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  nairobi.env
.github/workflows/: kernel.yml  sequencer.yml
benchmark/: README.md
benchmark/benchmark/: config.py  local.py  utils.py
crates/benchmark/benchmark/: commands.py
crates/config/: Cargo.toml
crates/config/src/: committee.rs  lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: intent.rs  keypair_file.rs  lib.rs
crates/executor/: Cargo.toml
crates/executor/src/: errors.rs  lib.rs  metrics.rs  subscriber.rs
crates/exporter/: Cargo.toml  build.rs
crates/exporter/src/: client.rs  lib.rs  proto.rs  server.rs
crates/macros/: Cargo.toml
crates/mysten-common/src/sync/: async_once_cell.rs
crates/mysten-network/src/: multiaddr.rs  server.rs
crates/mysten-util-mem/src/: lib.rs
crates/network/: Cargo.toml
crates/network/src/: admin.rs  client.rs  connectivity.rs  failpoints.rs
crates/node/: Cargo.toml
crates/node/src/: generate_format.rs  main.rs  metrics.rs  primary_node.rs  worker_node.rs
crates/node/tests/: node_test.rs
crates/pre-block/: Cargo.toml
crates/pre-block/proto/: exporter.proto
crates/pre-block/src/: bls_min_sig.rs  conversion.rs  digest.rs  exporter.rs  fixture.rs  lib.rs  validator.rs
crates/primary/: Cargo.toml
crates/primary/src/: aggregators.rs  certificate_fetcher.rs  certifier.rs  primary.rs  proposer.rs  state_handler.rs  synchronizer.rs
crates/primary/src/consensus/: bullshark.rs  leader_schedule.rs  metrics.rs  mod.rs  state.rs
crates/primary/src/consensus/tests/: consensus_tests.rs  consensus_utils.rs  leader_schedule_tests.rs  randomized_tests.rs
crates/primary/src/tests/: certificate_fetcher_tests.rs  certifier_tests.rs  common.rs  primary_tests.rs  state_handler_tests.rs  synchronizer_tests.rs
crates/primary/tests/: causal_completion_tests.rs  nodes_bootstrapping_tests.rs
crates/shared-crypto/src/: intent.rs
crates/storage/: Cargo.toml
crates/storage/src/: certificate_store.rs  consensus_store.rs  lib.rs  node_store.rs  payload_store.rs  proposer_store.rs  vote_digest_store.rs
crates/sui-macros/src/: lib.rs
crates/sui-protocol-config/: Cargo.toml
crates/sui-types/: Cargo.toml
crates/sui-types/src/: crypto.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: cluster.rs  lib.rs
crates/typed-store/: Cargo.toml
crates/typed-store/src/: lib.rs  test_db.rs
crates/typed-store/src/rocks/: errors.rs  mod.rs  util.rs
crates/typed-store/src/sally/: mod.rs
crates/types/: Cargo.toml  build.rs
crates/types/src/: codec.rs  consensus.rs  error.rs  lib.rs  primary.rs
crates/types/src/tests/: error_test.rs
crates/utils/: Cargo.toml
crates/utils/src/: histogram.rs  lib.rs  macros.rs  metered_channel.rs  metrics.rs  network.rs  notify_once.rs  notify_read.rs  protocol_config.rs  tracing.rs
crates/worker/: Cargo.toml
crates/worker/src/: batch_fetcher.rs  batch_maker.rs  client.rs  handlers.rs  lib.rs  metrics.rs  quorum_waiter.rs  tx_validator.rs  worker.rs
crates/worker/src/tests/: handlers_tests.rs  worker_tests.rs
crates/worker/src/transactions_server/: client.rs  config.rs  mod.rs  server.rs
docker/: Dockerfile  docker-compose.yml  entry.sh
docker/kernel/: Dockerfile  entrypoint.sh  local.dockerfile
docker/operator/: Dockerfile  entrypoint.sh  local.dockerfile
docker/scripts/: docker-compose.yml  gen.compose.py
docker/sequencer/: Dockerfile  entrypoint.sh  local.dockerfile
docker/setup/dsn-min-4-1/: README.md  committee.json  docker-compose.yml  workers.json
docker/setup/keys/: primary-1.key  primary-2.key  primary-4.key  primary-5.key  primary-6.key  primary-network-1.key  primary-network-2.key  primary-network-3.key  primary-network-4.key  primary-network-5.key  primary-network-7.key  worker-network-3.key  worker-network-4.key  worker-network-6.key  worker-network-7.key
docker/setup/single-operator/: README.md
docker/templates/: node.template
executor/: Cargo.toml
executor/proto/: executor.proto
executor/src/: client.rs  main.rs  server.rs
kernel/: Cargo.toml  build.rs
kernel/src/: executor.rs  lib.rs  storage.rs  tests.rs  validator.rs
kernel/tests/: committee.ipynb  governance.tz
launcher/: Cargo.toml
launcher/defaults/: committee.json  primary-3.key  primary-7.key  primary-network-6.key  worker-network-1.key  worker-network-2.key  worker-network-5.key  workers.json
launcher/src/: main.rs
narwhal/config/: Cargo.toml
narwhal/config/src/: committee.rs  duration_format.rs  lib.rs
narwhal/crypto/: Cargo.toml
narwhal/crypto/src/: lib.rs
narwhal/executor/: Cargo.toml
narwhal/executor/src/: state.rs  subscriber.rs
narwhal/network/: Cargo.toml
narwhal/network/src/: connectivity.rs  epoch_filter.rs
narwhal/node/: Cargo.toml
narwhal/primary/: Cargo.toml
narwhal/primary/src/: certificate_fetcher.rs  certifier.rs  lib.rs  primary.rs  proposer.rs  state_handler.rs  synchronizer.rs
narwhal/primary/src/consensus/: bullshark.rs  leader_schedule.rs  mod.rs  state.rs
narwhal/storage/: Cargo.toml
narwhal/storage/src/: certificate_store.rs  consensus_store.rs  payload_store.rs  proposer_store.rs
narwhal/types/: Cargo.toml
narwhal/types/src/: consensus.rs  error.rs  primary.rs  worker.rs
narwhal/worker/: Cargo.toml
narwhal/worker/src/: batch_fetcher.rs  batch_maker.rs  handlers.rs  quorum_waiter.rs  worker.rs
playground/: Cargo.toml
playground/src/: main.rs
sequencer/: Cargo.toml
sequencer/src/: consensus_client.rs  da_batcher.rs  fixture.rs  main.rs  narwhal_fixture.rs  rollup_client.rs
simple-benchmark/: Cargo.toml  build.rs
simple-benchmark/src/: main.rs
simple-benchmark/src/listener/: mod.rs  stats.rs
simple-benchmark/src/spammer/: mod.rs
simple-listener/: Cargo.toml  build.rs
simple-listener/src/: main.rs
simple-listener/tests/: e2e_latency.ipynb  txs.csv
simple-spammer/: Cargo.toml
simple-spammer/src/: main.rs
