[workspace]
resolver = "2"

members = [
    "crates/config",
    "crates/crypto",
    "crates/executor",
    "crates/macros",
    "crates/network",
    "crates/node",
    "crates/primary",
    "crates/storage",
    "crates/test-utils",
    "crates/typed-store",
    "crates/types",
    "crates/utils",
    "crates/worker",
    
    "playground",
]

[workspace.package]
version = "0.1.0"

[profile.release]
# debug = 1 means line charts only, which is minimum needed for good stack traces
debug = 1
# Write debug info into a separate file.
split-debuginfo = 'packed'
# Without stripping, sui binary size would be > 1GB.
strip = 'debuginfo'
# Exit process with SIGABRT when any thread panics
panic = 'abort'

# Same as release, but build binary with debug symbols (binary size will be ~ 1GB).
[profile.release-dbgsym]
inherits = "release"
split-debuginfo = 'off'
strip = 'none'

# Inherits from the release profile above.
[profile.bench]
# For convenience.
strip = 'none'

[profile.test.package.move-compiler]
# opt-level 2 for move-compiler reduces the size of some of its
# (recursive) stack frames by up to 10x, avoiding stack overflows.
opt-level = 2

[profile.simulator]
inherits = "test"
debug = true
debug-assertions = true
overflow-checks = true
# opt-level 1 gives >5x speedup for simulator tests without slowing down build times very much.
opt-level = 1

# Dependencies that should be kept in sync through the whole workspace
[workspace.dependencies]
anyhow = "1.0.71"
arc-swap = { version = "1.5.1", features = ["serde"] }
async-trait = "0.1.61"
axum = { version = "0.6.6", default-features = false, features = [
  "headers",
  "tokio",
  "http1",
  "http2",
  "json",
  "matched-path",
  "original-uri",
  "form",
  "query",
  "ws",
] }
axum-server = { version = "0.5.1", default-features = false, features = [
  "tls-rustls",
] }
backoff = { version = "0.4.0", features = [
  "futures",
  "futures-core",
  "pin-project-lite",
  "tokio",
  "tokio_1",
] }
base64 = "0.21.2"
bcs = "0.1.4"
bincode = "1.3.3"
byteorder = "1.4.3"
bytes = "1.4.0"
cfg-if = "1.0.0"
clap = { version = "4.4", features = ["derive", "wrap_help"] }
dashmap = "5.4.0"
derive_builder = "0.12.0"
enum_dispatch = "^0.3"
eyre = "0.6.8"
fdlimit = "0.2.1"
futures = "0.3.28"
governor = "0.6.0"
hdrhistogram = "7.5.1"
indexmap = { version = "1.9.2", features = ["serde"] }
itertools = "0.10.5"
lru = "0.10"
match_opt = "0.1.2"
mockall = "0.11.4"
multiaddr = "0.17.0"
once_cell = "1.18.0"
ouroboros = "0.17"
parking_lot = "0.12.1"
pretty_assertions = "1.3.0"
proc-macro2 = "1.0.47"
prometheus = "0.13.3"
proptest = "1.1.0"
proptest-derive = "0.3.0"
prost = "0.12.1"
prost-build = "0.12.1"
protobuf-src = "1.1.0"
quinn-proto = "^0.10.5"
quote = "1.0.23"
rand = "0.8.5"
reqwest = { version = "0.11.20", default_features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
roaring = "0.10.1"
rocksdb = { version = "0.21.0", features = [
  "snappy",
  "lz4",
  "zstd",
  "zlib",
  "multi-threaded-cf",
], default-features = false }
rustversion = "1.0.9"
scopeguard = "1.1"
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde-reflection = "0.3.6"
serde_repr = "0.1"
serde_json = { version = "1.0.95", features = [
  "preserve_order",
  "arbitrary_precision",
] }
serde_test = "1.0.147"
serde_with = { version = "2.1.0", features = ["hex"] }
serde_yaml = "0.8.26"
schemars = { version = "0.8.10", features = ["either"] }
snap = "1.1.0"
syn = { version = "1.0.104", features = ["full", "derive", "extra-traits"] }
tap = "1.0.1"
tempfile = "3.3.0"
thiserror = "1.0.40"
tokio = "1.28.1"
tokio-stream = { version = "0.1.14", features = ["sync", "net"] }
tonic = { version = "0.10", features = ["transport", "tls"] }
tonic-build = { version = "0.10", features = ["prost", "transport"] }
tonic-health = "0.10"
tower = { version = "0.4.12", features = [
  "full",
  "util",
  "timeout",
  "load-shed",
  "limit",
] }
tower-http = { version = "0.3.4", features = [
  "cors",
  "full",
  "trace",
  "set-header",
  "propagate-header",
] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.15", default-features = false, features = [
  "std",
  "smallvec",
  "fmt",
  "ansi",
  "time",
  "json",
  "registry",
  "env-filter",
] }
url = "2.3.1"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }

# fast crypto dependencies
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69180dc7275f5f0efb69e11e9d03f6db338d1dd6", features = ["copy_key"] }
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69180dc7275f5f0efb69e11e9d03f6db338d1dd6"}

# anemo dependencies
anemo = { git = "https://github.com/mystenlabs/anemo.git", rev = "1169850e6af127397068cd86764c29b1d49dbe35" }
anemo-build = { git = "https://github.com/mystenlabs/anemo.git", rev = "1169850e6af127397068cd86764c29b1d49dbe35" }
anemo-tower = { git = "https://github.com/mystenlabs/anemo.git", rev = "1169850e6af127397068cd86764c29b1d49dbe35" }

# narwal crates
narwhal-config = { path = "crates/config" }
narwhal-crypto = { path = "crates/crypto" }
narwhal-executor = { path = "crates/executor" }
narwhal-macros = { path = "crates/macros" }
narwhal-network = { path = "crates/network" }
narwhal-node = { path = "crates/node" }
narwhal-primary = { path = "crates/primary" }
narwhal-storage = { path = "crates/storage" }
narwhal-test-utils = { path = "crates/test-utils" }
narwhal-typed-store = { path = "crates/typed-store" }
narwhal-types = { path = "crates/types" }
narwhal-utils = { path = "crates/utils" }
narwhal-worker = { path = "crates/worker" }
