[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[dependencies]
crypto = { path = "../crates/crypto", package = "narwhal-crypto" }
config = { path = "../crates/config", package = "narwhal-config" }
storage = { path = "../crates/storage", package = "narwhal-storage" }
network = { path = "../crates/network", package = "narwhal-network" }
node = { path = "../crates/node", package = "narwhal-node" }
worker = { path = "../crates/worker", package = "narwhal-worker" }

fastcrypto.workspace = true
sui-protocol-config.workspace = true
rand.workspace = true
tokio.workspace = true
prometheus.workspace = true
mysten-metrics.workspace = true
mysten-network.workspace = true