# SPDX-FileCopyrightText: 2023 Baking Bad <hello@bakingbad.dev>
#
# SPDX-License-Identifier: MIT

[package]
name = "sequencer"
edition = "2021"
version.workspace = true

[dependencies]
reqwest.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
clap.workspace = true
tonic.workspace = true
bytes.workspace = true
bcs.workspace = true
prost.workspace = true

tezos_crypto_rs = { version = "0.5.2", default-features = false }
tezos_data_encoding = { version = "0.5.2" }
tezos-smart-rollup-encoding = { version = "0.2.2", default_features = false, features = ["alloc", "tezos-encoding" ] }
hex = "*"
env_logger = "0.10.0"
log = "0.4"
axum = "0.7.3"

narwhal-types.workspace = true

pre-block = { workspace = true, features = ["conversions"] }

[build-dependencies]
tonic-build.workspace = true
protobuf-src.workspace = true

[[bin]]
name = "sequencer"
path = "src/main.rs"
