[package]
name = "narwhal-crypto"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
eyre.workspace = true
fastcrypto.workspace = true
fastcrypto-tbls.workspace = true
serde.workspace = true
serde_repr.workspace = true
bcs.workspace = true
rand.workspace = true

[features]
default = []

[dev-dependencies]
bincode.workspace = true
proptest.workspace = true
proptest-derive.workspace = true
serde_json.workspace = true
serde-reflection.workspace = true
