[package]
name = "narwhal-executor"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
publish = false

[dependencies]
async-trait.workspace = true
bcs.workspace = true
bincode.workspace = true
bytes.workspace = true
config = { path = "../config", package = "narwhal-config" }
fastcrypto.workspace = true
futures.workspace = true
primary = { path = "../primary", package = "narwhal-primary" }
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tonic.workspace = true
tracing.workspace = true
prometheus.workspace = true
storage = { path = "../storage", package = "narwhal-storage" }

types = { path = "../types", package = "narwhal-types" }
network = { path = "../network", package = "narwhal-network" }
crypto = { path = "../crypto", package = "narwhal-crypto" }
typed-store = { path = "../typed-store", package = "narwhal-typed-store" }
utils = { path = "../utils", package = "narwhal-utils" }
mockall.workspace = true

[dev-dependencies]
indexmap.workspace = true
tempfile.workspace = true
primary = { path = "../primary", package = "narwhal-primary" }
node = { path = "../node", package = "narwhal-node" }
test-utils = { path = "../test-utils", package = "narwhal-test-utils" }
types = { path = "../types", package = "narwhal-types" }
