# SPDX-FileCopyrightText: 2023 Baking Bad <hello@bakingbad.dev>
#
# SPDX-License-Identifier: MIT

[package]
name = "pre-block"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
serde.workspace = true
serde_repr.workspace = true
anyhow.workspace = true
tezos_crypto_rs = { version = "0.5.2", default-features = false }

blst = "=0.3.10"
protobuf = "3.3.0"
bcs = "0.1.6"

[dev-dependencies]
narwhal-types.workspace = true
narwhal-crypto.workspace = true
narwhal-test-utils.workspace = true