# SPDX-FileCopyrightText: 2023 Baking Bad <hello@bakingbad.dev>
#
# SPDX-License-Identifier: MIT

[package]
name = "pre-block"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
serde.workspace = true
anyhow.workspace = true
tezos_crypto_rs = { version = "0.5.2", default-features = false }
hex = "*"
blst = "=0.3.10"
bcs = "0.1.6"

narwhal-types = { workspace = true, optional = true }
narwhal-utils = { workspace = true, optional = true }
narwhal-test-utils = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
narwhal-exporter = { workspace = true, optional = true }

[dev-dependencies]
narwhal-types.workspace = true
narwhal-crypto.workspace = true
narwhal-exporter.workspace = true
narwhal-utils.workspace = true
narwhal-test-utils.workspace = true
narwhal-config.workspace = true

indexmap.workspace = true
fastcrypto.workspace = true
rand.workspace = true

[features]
default = []
conversions = [
    "dep:rand",
    "dep:narwhal-exporter",
    "dep:narwhal-types",
    "dep:narwhal-utils",
    "dep:narwhal-test-utils"
]