[package]
name = "narwhal-storage"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
publish = false


[dependencies]
tempfile.workspace = true
fastcrypto.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
tracing.workspace = true
types = { path = "../types", package = "narwhal-types" }
typed-store = { path = "../typed-store", package = "narwhal-typed-store" }
config = { path = "../config", package = "narwhal-config" }
utils = { path = "../utils", package = "narwhal-utils" }
prometheus.workspace = true
lru.workspace = true
parking_lot.workspace = true
tap.workspace = true

[dev-dependencies]
test-utils = { path = "../test-utils", package = "narwhal-test-utils" }
