[package]
name = "narwhal-test-utils"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
publish = false

[dependencies]
fdlimit.workspace = true
indexmap.workspace = true
itertools.workspace = true
prometheus.workspace = true
rand.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
tonic.workspace = true
tracing.workspace = true
once_cell.workspace = true

config = { path = "../config", package = "narwhal-config" }
fastcrypto.workspace = true
crypto = { path = "../crypto", package = "narwhal-crypto" }
executor = { path = "../executor", package = "narwhal-executor" }
network = { path = "../network", package = "narwhal-network" }
node = { path = "../node", package = "narwhal-node" }
primary = { path = "../primary", package = "narwhal-primary" }
types = { path = "../types", package = "narwhal-types" }
worker = { path = "../worker", package = "narwhal-worker" }
utils = { path = "../utils", package = "narwhal-utils" }
storage = { path = "../storage", package = "narwhal-storage" }
mysten-metrics.workspace = true
typed-store.workspace = true
telemetry-subscribers.workspace = true
mysten-network.workspace = true

anemo.workspace = true
workspace-hack.workspace = true
