[package]
name = "narwhal-utils"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
macros = { path = "../macros", package = "narwhal-macros" }
anemo.workspace = true
clap.workspace = true
eyre.workspace = true
multiaddr.workspace = true
serde.workspace = true
serde_with.workspace = true
schemars.workspace = true
insta.workspace = true
once_cell.workspace = true
futures.workspace = true
tracing.workspace = true
tokio.workspace = true
parking_lot.workspace = true
workspace-hack.workspace = true

