[package]
name = "narwhal-utils"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
macros = { path = "../macros", package = "narwhal-macros" }
anemo.workspace = true
axum.workspace = true
clap.workspace = true
crossterm.workspace = true
eyre.workspace = true
multiaddr.workspace = true
scopeguard.workspace = true
serde.workspace = true
serde_with.workspace = true
schemars.workspace = true
once_cell.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
tap.workspace = true
dashmap.workspace = true
uuid.workspace = true
async-trait.workspace = true

